implementado testes Caracteristica e AvaliacaoCaracteristica.
Corrigido testes.