@@ -19,7 +19,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-@ExtendWith(MockitoExtension.class)  // inicializa os mocks automaticamente
+@ExtendWith(MockitoExtension.class)
 class AlunoServiceTest {
 
     @Mock
@@ -31,20 +31,18 @@ class AlunoServiceTest {
     @InjectMocks
     private AlunoService alunoService;
 
-    // removeu setUp(), pois @ExtendWith(MockitoExtension.class) já inicializa os mocks
-
     @Test
     void deveSalvarAluno() {
         Set<Long> idsProfessores = Set.of(1L);
-        AlunoDTO dto = new AlunoDTO("Joao", "12345678901", "joao@email.com", "9999999999", 5, idsProfessores);
+        AlunoDTO dto = new AlunoDTO("Joao", "12345678901", "joao@email.com", "9999999999", idsProfessores);
 
         when(professorRepository.findAllById(idsProfessores)).thenReturn(new ArrayList<>());
 
         Aluno alunoSalvo = Aluno.builder()
                 .id(1L)
                 .nome(dto.getNome())
-                .email(dto.getEmail())
                 .cpf(dto.getCpf())
+                .email(dto.getEmail())
                 .telefone(dto.getTelefone())
                 .professores(new HashSet<>())
                 .build();
@@ -57,13 +55,13 @@ class AlunoServiceTest {
         assertEquals("Joao", resultado.getNome());
     }
 
-
     @Test
     void deveListarAlunos() {
-        List<Aluno> alunos = Arrays.asList(
-                Aluno.builder().id(1L).nome("A").email("a@email.com").cpf("11111111111").telefone("9999999999").professores(new HashSet<>()).build(),
-                Aluno.builder().id(2L).nome("B").email("b@email.com").cpf("22222222222").telefone("8888888888").professores(new HashSet<>()).build()
+        List<Aluno> alunos = List.of(
+                Aluno.builder().id(1L).nome("A").cpf("11111111111").email("a@email.com").telefone("9999999999").professores(new HashSet<>()).build(),
+                Aluno.builder().id(2L).nome("B").cpf("22222222222").email("b@email.com").telefone("8888888888").professores(new HashSet<>()).build()
         );
+
         when(alunoRepository.findAll()).thenReturn(alunos);
 
         List<AlunoResponseDTO> resultado = alunoService.listar();
@@ -76,11 +74,12 @@ class AlunoServiceTest {
         Aluno aluno = Aluno.builder()
                 .id(1L)
                 .nome("Joao")
-                .email("j@email.com")
                 .cpf("12388888888")
+                .email("j@email.com")
                 .telefone("9999999999")
                 .professores(new HashSet<>())
                 .build();
+
         when(alunoRepository.findById(1L)).thenReturn(Optional.of(aluno));
 
         Optional<Aluno> resultado = alunoService.buscarPorId(1L);
@@ -94,14 +93,14 @@ class AlunoServiceTest {
         Aluno aluno = Aluno.builder()
                 .id(1L)
                 .nome("Joao")
-                .email("j@email.com")
                 .cpf("12333333333")
+                .email("j@email.com")
                 .telefone("9999999999")
                 .professores(new HashSet<>())
                 .build();
 
         Set<Long> novosProfessores = Set.of(2L);
-        AlunoDTO dto = new AlunoDTO("Novo Nome", "99999999999", "novo@email.com", "8888888888", 5, novosProfessores);
+        AlunoDTO dto = new AlunoDTO("Novo Nome", "99999999999", "novo@email.com", "8888888888", novosProfessores);
 
         when(alunoRepository.findById(1L)).thenReturn(Optional.of(aluno));
         when(professorRepository.findAllById(novosProfessores)).thenReturn(new ArrayList<>());
@@ -118,8 +117,8 @@ class AlunoServiceTest {
         Aluno aluno = Aluno.builder()
                 .id(1L)
                 .nome("Joao")
-                .email("j@email.com")
                 .cpf("12345678901")
+                .email("j@email.com")
                 .telefone("9990000000")
                 .professores(new HashSet<>())
                 .build();
@@ -129,20 +128,42 @@ class AlunoServiceTest {
         boolean resultado = alunoService.deletar(1L);
 
         assertTrue(resultado);
-        verify(alunoRepository, times(1)).delete(aluno);
+        verify(alunoRepository).delete(aluno);
     }
 
     @Test
     void deveSalvarAlunoComProfessores() {
-        AlunoDTO dto = new AlunoDTO("Ana", "12345678900", "ana@email.com", "11988887777", 5, Set.of(1L, 2L));
+        AlunoDTO dto = new AlunoDTO("Ana", "12345678900", "ana@email.com", "11988887777", Set.of(1L, 2L));
 
-        Professor p1 = new Professor(1L, "Carlos", "11999999999", "12345678901", new HashSet<>());
-        Professor p2 = new Professor(2L, "Marcia", "21988888888", "09876543210", new HashSet<>());
+        Professor p1 = Professor.builder()
+                .id(1L)
+                .nome("Carlos")
+                .telefone("11999999999")
+                .cpf("12345678901")
+                .alunos(new HashSet<>()) // se necessário
+                .build();
+
+        Professor p2 = Professor.builder()
+                .id(2L)
+                .nome("Roberto")
+                .telefone("11998789999")
+                .cpf("12348778901")
+                .alunos(new HashSet<>()) // se necessário
+                .build();
+
 
         when(professorRepository.findAllById(Set.of(1L, 2L))).thenReturn(List.of(p1, p2));
 
-        Aluno salvo = new Aluno(null, dto.getNome(), dto.getCpf(), dto.getEmail(), dto.getTelefone(), 5, Set.of(p1, p2));
-        when(alunoRepository.save(any(Aluno.class))).thenReturn(salvo);
+        Aluno alunoSalvo = Aluno.builder()
+                .id(1L)
+                .nome(dto.getNome())
+                .cpf(dto.getCpf())
+                .email(dto.getEmail())
+                .telefone(dto.getTelefone())
+                .professores(Set.of(p1, p2))
+                .build();
+
+        when(alunoRepository.save(any())).thenReturn(alunoSalvo);
 
         Aluno resultado = alunoService.salvar(dto);
 
@@ -151,5 +172,4 @@ class AlunoServiceTest {
         verify(professorRepository).findAllById(dto.getProfessoresIds());
         verify(alunoRepository).save(any(Aluno.class));
     }
-
 }
